removed excess files, fixed background spacing

--- a/form/form.css
+++ b/form/form.css
@@ -162,9 +162,10 @@ h2{
 }
 
 #backstory textarea{
-  width: 614px;
-  height: 205px;
-  padding: 0;
+  width: 600px;
+  height: 190px;
+  padding:0px;
+  margin-left:7px;
   resize: none;
   font: 15px helvetica;
   border: none;
